--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -261,7 +261,7 @@
   <!-- Navbar Right Section -->
   <div class="flex flex-col sm:flex-row items-center gap-2 sm:gap-6 mt-2 sm:mt-0">
     <!-- User Dropdown -->
-    <div class="relative">
+    <div class="relative" #userDropdown>
       <button (click)="toggleDropdown()"
         class="flex items-center text-gray-700 font-medium text-sm sm:text-base cursor-pointer px-4 py-2 rounded-lg transition-all hover:bg-gray-100">
         <img src="user.png" alt="User Icon" class="h-6 w-6 mr-2" />
