submit button left sode mr-2

--- a/src/app/features/organisation-section/components/employee/employee.component.html
+++ b/src/app/features/organisation-section/components/employee/employee.component.html
@@ -593,7 +593,7 @@
 
             <!-- Submit Button -->
             <div class="mt-4">
-                <button type="submit" class="bg-green-500 text-white px-6 py-2 rounded">Add Department</button>
+                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded m-4">Add Department</button>
             </div>
         </form>
 
@@ -669,7 +669,7 @@
             </div>
 
             <div class="mt-4">
-                <button type="submit" class="bg-green-500 text-white px-6 py-2 rounded">Add Project Role</button>
+                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded m-4">Add Project Role</button>
             </div>
         </form>
 
@@ -750,7 +750,7 @@
             </div>
 
             <div class="mt-4">
-                <button type="submit" class="bg-green-500 text-white px-6 py-2 rounded">Add Designation</button>
+                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded m-4">Add Designation</button>
             </div>
         </form>
 
@@ -860,7 +860,7 @@
             </div>
             <!-- Save Button -->
             <div class="mt-4">
-                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Add Skill</button>
+                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded m-4">Add Skill</button>
             </div>
         </form>
 
@@ -1032,7 +1032,7 @@
 
             <!-- Save Button -->
             <div class="mt-4">
-                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Submit</button>
+                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded m-4">Submit</button>
             </div>
         </form>
 
