--- a/src/app/features/organisation-section/components/project/project.component.html
+++ b/src/app/features/organisation-section/components/project/project.component.html
@@ -166,7 +166,7 @@
       
           <!-- Save Button -->
           <div class="mt-4">
-            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Save</button>
+            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded m-2">Save</button>
           </div>
         </form>
       
@@ -326,7 +326,7 @@
         
             <!-- Save Button -->
             <div class="mt-4">
-              <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Save</button>
+              <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded m-2">Save</button>
             </div>
           </form>
                
@@ -618,7 +618,7 @@
                        
                         <!-- Save Button -->
                         <div class="mt-4">
-                            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Save</button>
+                            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded m-2">Create Project</button>
                         </div>
                     </form>
                 <!-- Edit Modal -->
