--- a/src/app/features/timesheet/components/fill-timesheet/fill-timesheet.component.html
+++ b/src/app/features/timesheet/components/fill-timesheet/fill-timesheet.component.html
@@ -155,7 +155,7 @@
         </div>
         <!-- Submit Button (Full Width) -->
         <div class="mt-4">
-            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">
+            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded m-2">
                 Submit
             </button>
         </div>
