--- a/src/app/features/organisation-section/components/customer/customer.component.html
+++ b/src/app/features/organisation-section/components/customer/customer.component.html
@@ -213,8 +213,8 @@
 
             <!-- Submit Button -->
             <div class="mt-4">
-                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">
-                    Submit
+                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded m-2">
+                    Create Customer
                 </button>
             </div>
         </form>
@@ -797,7 +797,7 @@
 
             <!-- Submit Button -->
             <div class="mt-4">
-                <button type="submit" class="bg-green-500 text-white px-4 py-2 rounded">
+                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded m-2">
                     Save
                 </button>
             </div>
