--- a/src/app/features/resource-management/components/assign-project-team/assign-project-team.component.html
+++ b/src/app/features/resource-management/components/assign-project-team/assign-project-team.component.html
@@ -133,19 +133,19 @@
     </div>
 
     <!-- Submit Button -->
-    <div class="mt-6 flex justify-end">
+    <div class="mt-6 flex justify-start">
         <button (click)="submitAssignProjectTeam()"
-            class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">
+            class="bg-blue-500 text-white px-4 py-2 rounded m-2">
             Submit
         </button>
     </div>
     <div *ngIf="isEditModalOpen" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-[1000]"
         (click)="closeEditModal()">
-        <div class="bg-white p-6 rounded-lg w-1/3" (click)="$event.stopPropagation()">
+        <div class="bg-white p-6 rounded-lg w-1/2" (click)="$event.stopPropagation()">
             <h3 class="text-xl font-semibold mb-4">Edit Assign Team</h3>
             <form #editAssignTeamForm="ngForm"
                 (ngSubmit)="updateAssignTeam(editAssignTeamForm); $event.preventDefault()">
-                <div class="grid grid-cols-6 gap-4">
+                <div class="grid grid-cols-4 gap-4">
                     <!-- Customer Name -->
                     <div class="form-group">
                         <label class="block mb-2 font-semibold">Customer Name*</label>
