--- a/src/app/features/timesheet/components/managers-hub/managers-hub.component.html
+++ b/src/app/features/timesheet/components/managers-hub/managers-hub.component.html
@@ -73,7 +73,7 @@
 
             <!-- Save Button -->
             <div class="mt-4">
-                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Save</button>
+                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded m-2">Save</button>
             </div>
         </form>
 
@@ -265,7 +265,7 @@
 
             <!-- Save Button -->
             <div class="mt-4">
-                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Save</button>
+                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded m-2">Save</button>
             </div>
         </form>
 
